ANTLR/t3_cc2Parser.py
# Generated from /Users/marcelodeoliveiradasilva/PycharmProjects/T3_CC2_PyCharm/t3_cc2.g4 by ANTLR 4.6
# encoding: utf-8
from antlr4 import *
from io import StringIO



class t3_cc2Parser ( Parser ):

    grammarFileName = "t3_cc2.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'site'", "'('", "')'", "'{'", "'}'", 
                     "'titulo'", "'='", "'menu'", "'item'", "'->'", "'+'", 
                     "'sidebar'", "'banner'", "'subtitulo'", "'rodape'", 
                     "'conteudo'", "'secao'", "'colunas'", "'coluna'", "'texto'", 
                     "'paragrafo'", "'imagem'", "','", "'tamanho'", "'extra-pequeno'", 
                     "'pequeno'", "'medio'", "'grande'", "'extra-grande'", 
                     "'fonte'", "'Arial'", "'Helvetica'", "'Times New Roman'", 
                     "'Lato'", "'Roboto'", "'Open Sans'", "'cor'", "'azul'", 
                     "'verde'", "'amarelo'", "'branco'", "'preto'", "'vermelho'", 
                     "'laranja'", "'roxo'", "'rosa'", "'cinza'", "'marrom'", 
                     "'azul-claro'", "'fundo'", "'alinhamento'", "'centralizado'", 
                     "'esquerda'", "'direita'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "CADEIA", "COMENTARIO", 
                      "ESPACO" ]

    RULE_site = 0
    RULE_titulo_site = 1
    RULE_titulo = 2
    RULE_menu = 3
    RULE_item = 4
    RULE_link = 5
    RULE_nova_aba = 6
    RULE_mais_itens = 7
    RULE_sidebar = 8
    RULE_banner = 9
    RULE_subtitulo = 10
    RULE_rodape = 11
    RULE_conteudo = 12
    RULE_secao = 13
    RULE_mais_secoes = 14
    RULE_colunas = 15
    RULE_coluna = 16
    RULE_mais_colunas = 17
    RULE_texto = 18
    RULE_conteudo_texto = 19
    RULE_mais_conteudo_texto = 20
    RULE_paragrafo = 21
    RULE_imagem = 22
    RULE_parametros = 23
    RULE_mais_parametros = 24
    RULE_tamanho = 25
    RULE_opcao_tamanho = 26
    RULE_fonte = 27
    RULE_opcao_fonte = 28
    RULE_cor = 29
    RULE_opcao_cor = 30
    RULE_fundo = 31
    RULE_alinhamento = 32
    RULE_opcao_alinhamento = 33

    ruleNames =  [ "site", "titulo_site", "titulo", "menu", "item", "link", 
                   "nova_aba", "mais_itens", "sidebar", "banner", "subtitulo", 
                   "rodape", "conteudo", "secao", "mais_secoes", "colunas", 
                   "coluna", "mais_colunas", "texto", "conteudo_texto", 
                   "mais_conteudo_texto", "paragrafo", "imagem", "parametros", 
                   "mais_parametros", "tamanho", "opcao_tamanho", "fonte", 
                   "opcao_fonte", "cor", "opcao_cor", "fundo", "alinhamento", 
                   "opcao_alinhamento" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    CADEIA=55
    COMENTARIO=56
    ESPACO=57

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.6")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class SiteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def conteudo(self):
            return self.getTypedRuleContext(t3_cc2Parser.ConteudoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(t3_cc2Parser.ParametrosContext,0)


        def menu(self):
            return self.getTypedRuleContext(t3_cc2Parser.MenuContext,0)


        def sidebar(self):
            return self.getTypedRuleContext(t3_cc2Parser.SidebarContext,0)


        def banner(self):
            return self.getTypedRuleContext(t3_cc2Parser.BannerContext,0)


        def rodape(self):
            return self.getTypedRuleContext(t3_cc2Parser.RodapeContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_site

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSite" ):
                return visitor.visitSite(self)
            else:
                return visitor.visitChildren(self)




    def site(self):

        localctx = t3_cc2Parser.SiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_site)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(t3_cc2Parser.T__0)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__1:
                self.state = 69
                self.match(t3_cc2Parser.T__1)
                self.state = 70
                self.parametros()
                self.state = 71
                self.match(t3_cc2Parser.T__2)


            self.state = 75
            self.match(t3_cc2Parser.T__3)
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__7:
                self.state = 76
                self.menu()


            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__11:
                self.state = 79
                self.sidebar()


            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__12:
                self.state = 82
                self.banner()


            self.state = 85
            self.conteudo()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__14:
                self.state = 86
                self.rodape()


            self.state = 89
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Titulo_siteContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(t3_cc2Parser.CADEIA, 0)

        def getRuleIndex(self):
            return t3_cc2Parser.RULE_titulo_site

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitulo_site" ):
                return visitor.visitTitulo_site(self)
            else:
                return visitor.visitChildren(self)




    def titulo_site(self):

        localctx = t3_cc2Parser.Titulo_siteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_titulo_site)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(t3_cc2Parser.T__5)
            self.state = 92
            self.match(t3_cc2Parser.T__6)
            self.state = 93
            self.match(t3_cc2Parser.CADEIA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TituloContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(t3_cc2Parser.CADEIA, 0)

        def parametros(self):
            return self.getTypedRuleContext(t3_cc2Parser.ParametrosContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_titulo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTitulo" ):
                return visitor.visitTitulo(self)
            else:
                return visitor.visitChildren(self)




    def titulo(self):

        localctx = t3_cc2Parser.TituloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_titulo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(t3_cc2Parser.T__5)
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 96
                self.match(t3_cc2Parser.T__1)
                self.state = 97
                self.parametros()
                self.state = 98
                self.match(t3_cc2Parser.T__2)


            self.state = 102
            self.match(t3_cc2Parser.T__1)
            self.state = 103
            self.match(t3_cc2Parser.CADEIA)
            self.state = 104
            self.match(t3_cc2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MenuContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def item(self):
            return self.getTypedRuleContext(t3_cc2Parser.ItemContext,0)


        def mais_itens(self):
            return self.getTypedRuleContext(t3_cc2Parser.Mais_itensContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_menu

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMenu" ):
                return visitor.visitMenu(self)
            else:
                return visitor.visitChildren(self)




    def menu(self):

        localctx = t3_cc2Parser.MenuContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_menu)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(t3_cc2Parser.T__7)
            self.state = 107
            self.match(t3_cc2Parser.T__3)
            self.state = 108
            self.item()
            self.state = 109
            self.mais_itens()
            self.state = 110
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ItemContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(t3_cc2Parser.CADEIA, 0)

        def link(self):
            return self.getTypedRuleContext(t3_cc2Parser.LinkContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitItem" ):
                return visitor.visitItem(self)
            else:
                return visitor.visitChildren(self)




    def item(self):

        localctx = t3_cc2Parser.ItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(t3_cc2Parser.T__8)
            self.state = 113
            self.match(t3_cc2Parser.T__1)
            self.state = 114
            self.match(t3_cc2Parser.CADEIA)
            self.state = 115
            self.match(t3_cc2Parser.T__2)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__9:
                self.state = 116
                self.link()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LinkContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(t3_cc2Parser.CADEIA, 0)

        def nova_aba(self):
            return self.getTypedRuleContext(t3_cc2Parser.Nova_abaContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_link

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLink" ):
                return visitor.visitLink(self)
            else:
                return visitor.visitChildren(self)




    def link(self):

        localctx = t3_cc2Parser.LinkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_link)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(t3_cc2Parser.T__9)
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__10:
                self.state = 120
                self.nova_aba()


            self.state = 123
            self.match(t3_cc2Parser.CADEIA)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Nova_abaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_nova_aba

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNova_aba" ):
                return visitor.visitNova_aba(self)
            else:
                return visitor.visitChildren(self)




    def nova_aba(self):

        localctx = t3_cc2Parser.Nova_abaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nova_aba)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(t3_cc2Parser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mais_itensContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def item(self):
            return self.getTypedRuleContext(t3_cc2Parser.ItemContext,0)


        def mais_itens(self):
            return self.getTypedRuleContext(t3_cc2Parser.Mais_itensContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_mais_itens

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMais_itens" ):
                return visitor.visitMais_itens(self)
            else:
                return visitor.visitChildren(self)




    def mais_itens(self):

        localctx = t3_cc2Parser.Mais_itensContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_mais_itens)
        try:
            self.state = 131
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [t3_cc2Parser.T__8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self.item()
                self.state = 128
                self.mais_itens()
                pass
            elif token in [t3_cc2Parser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SidebarContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def item(self):
            return self.getTypedRuleContext(t3_cc2Parser.ItemContext,0)


        def mais_itens(self):
            return self.getTypedRuleContext(t3_cc2Parser.Mais_itensContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_sidebar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSidebar" ):
                return visitor.visitSidebar(self)
            else:
                return visitor.visitChildren(self)




    def sidebar(self):

        localctx = t3_cc2Parser.SidebarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_sidebar)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.match(t3_cc2Parser.T__11)
                self.state = 134
                self.match(t3_cc2Parser.T__3)
                self.state = 135
                self.item()
                self.state = 136
                self.mais_itens()
                self.state = 137
                self.match(t3_cc2Parser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.match(t3_cc2Parser.T__11)
                self.state = 140
                self.match(t3_cc2Parser.T__6)
                self.state = 141
                self.match(t3_cc2Parser.T__7)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BannerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def texto(self):
            return self.getTypedRuleContext(t3_cc2Parser.TextoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(t3_cc2Parser.ParametrosContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_banner

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBanner" ):
                return visitor.visitBanner(self)
            else:
                return visitor.visitChildren(self)




    def banner(self):

        localctx = t3_cc2Parser.BannerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_banner)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(t3_cc2Parser.T__12)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==t3_cc2Parser.T__1:
                self.state = 145
                self.match(t3_cc2Parser.T__1)
                self.state = 146
                self.parametros()
                self.state = 147
                self.match(t3_cc2Parser.T__2)


            self.state = 151
            self.match(t3_cc2Parser.T__3)
            self.state = 152
            self.texto()
            self.state = 153
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SubtituloContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CADEIA(self):
            return self.getToken(t3_cc2Parser.CADEIA, 0)

        def parametros(self):
            return self.getTypedRuleContext(t3_cc2Parser.ParametrosContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_subtitulo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSubtitulo" ):
                return visitor.visitSubtitulo(self)
            else:
                return visitor.visitChildren(self)




    def subtitulo(self):

        localctx = t3_cc2Parser.SubtituloContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_subtitulo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(t3_cc2Parser.T__13)
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 156
                self.match(t3_cc2Parser.T__1)
                self.state = 157
                self.parametros()
                self.state = 158
                self.match(t3_cc2Parser.T__2)


            self.state = 162
            self.match(t3_cc2Parser.T__1)
            self.state = 163
            self.match(t3_cc2Parser.CADEIA)
            self.state = 164
            self.match(t3_cc2Parser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RodapeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def texto(self):
            return self.getTypedRuleContext(t3_cc2Parser.TextoContext,0)


        def colunas(self):
            return self.getTypedRuleContext(t3_cc2Parser.ColunasContext,0)


        def coluna(self):
            return self.getTypedRuleContext(t3_cc2Parser.ColunaContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_rodape

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRodape" ):
                return visitor.visitRodape(self)
            else:
                return visitor.visitChildren(self)




    def rodape(self):

        localctx = t3_cc2Parser.RodapeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rodape)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(t3_cc2Parser.T__14)
            self.state = 167
            self.match(t3_cc2Parser.T__3)
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 168
                self.texto()
                pass

            elif la_ == 2:
                self.state = 170
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==t3_cc2Parser.T__19:
                    self.state = 169
                    self.texto()


                self.state = 172
                self.colunas()
                pass

            elif la_ == 3:
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==t3_cc2Parser.T__19:
                    self.state = 173
                    self.texto()


                self.state = 176
                self.coluna()
                pass


            self.state = 179
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConteudoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def secao(self):
            return self.getTypedRuleContext(t3_cc2Parser.SecaoContext,0)


        def mais_secoes(self):
            return self.getTypedRuleContext(t3_cc2Parser.Mais_secoesContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_conteudo

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConteudo" ):
                return visitor.visitConteudo(self)
            else:
                return visitor.visitChildren(self)




    def conteudo(self):

        localctx = t3_cc2Parser.ConteudoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_conteudo)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 181
            self.match(t3_cc2Parser.T__15)
            self.state = 182
            self.match(t3_cc2Parser.T__3)
            self.state = 183
            self.secao()
            self.state = 184
            self.mais_secoes()
            self.state = 185
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SecaoContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def texto(self):
            return self.getTypedRuleContext(t3_cc2Parser.TextoContext,0)


        def colunas(self):
            return self.getTypedRuleContext(t3_cc2Parser.ColunasContext,0)


        def coluna(self):
            return self.getTypedRuleContext(t3_cc2Parser.ColunaContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_secao

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSecao" ):
                return visitor.visitSecao(self)
            else:
                return visitor.visitChildren(self)




    def secao(self):

        localctx = t3_cc2Parser.SecaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_secao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(t3_cc2Parser.T__16)
            self.state = 188
            self.match(t3_cc2Parser.T__3)
            self.state = 198
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 189
                self.texto()
                pass

            elif la_ == 2:
                self.state = 191
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==t3_cc2Parser.T__19:
                    self.state = 190
                    self.texto()


                self.state = 193
                self.colunas()
                pass

            elif la_ == 3:
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==t3_cc2Parser.T__19:
                    self.state = 194
                    self.texto()


                self.state = 197
                self.coluna()
                pass


            self.state = 200
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Mais_secoesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def secao(self):
            return self.getTypedRuleContext(t3_cc2Parser.SecaoContext,0)


        def mais_secoes(self):
            return self.getTypedRuleContext(t3_cc2Parser.Mais_secoesContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_mais_secoes

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMais_secoes" ):
                return visitor.visitMais_secoes(self)
            else:
                return visitor.visitChildren(self)




    def mais_secoes(self):

        localctx = t3_cc2Parser.Mais_secoesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_mais_secoes)
        try:
            self.state = 206
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [t3_cc2Parser.T__16]:
                self.enterOuterAlt(localctx, 1)
                self.state = 202
                self.secao()
                self.state = 203
                self.mais_secoes()
                pass
            elif token in [t3_cc2Parser.T__4]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColunasContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coluna(self):
            return self.getTypedRuleContext(t3_cc2Parser.ColunaContext,0)


        def mais_colunas(self):
            return self.getTypedRuleContext(t3_cc2Parser.Mais_colunasContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_colunas

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColunas" ):
                return visitor.visitColunas(self)
            else:
                return visitor.visitChildren(self)




    def colunas(self):

        localctx = t3_cc2Parser.ColunasContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_colunas)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 208
            self.match(t3_cc2Parser.T__17)
            self.state = 209
            self.match(t3_cc2Parser.T__3)
            self.state = 210
            self.coluna()
            self.state = 211
            self.mais_colunas()
            self.state = 212
            self.match(t3_cc2Parser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ColunaContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def imagem(self):
            return self.getTypedRuleContext(t3_cc2Parser.ImagemContext,0)


        def texto(self):
            return self.getTypedRuleContext(t3_cc2Parser.TextoContext,0)


        def parametros(self):
            return self.getTypedRuleContext(t3_cc2Parser.ParametrosContext,0)


        def getRuleIndex(self):
            return t3_cc2Parser.RULE_coluna

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColuna" ):
                return visitor.visitColuna(self)
            else:
                return visitor.visitChildren(self)




    def coluna(self):
